# RiseEngine

./: .gitignore  CMakeLists.txt  RiseEngine.sln
GTests/: GTests.vcxproj  GTests.vcxproj.filters  MatrixTests.cpp  VectorTests.cpp  mainTest.cpp
Sandbox/: Application.cpp  Sandbox.vcxproj
src/: Rise.hpp
src/Math/: RiseMath.h  RiseMath.hpp
src/Math/Public/: Matrix.h  Matrix.hpp  Matrix.inl  Vector.h  Vector.hpp  Vector.inl
src/Rendering/Shapes/: Shape.cpp  Shape.h
src/Rendering/include/: GLErrorLibrary.hpp  GLFlags.hpp  Renderer.h  Renderer.hpp  Shader.h  Shader.hpp  VAO.h  VAO.hpp  VBO.h  VBO.hpp
src/Rendering/src/: GLErrorLibrary.cpp  Renderer.cpp  Shader.cpp  VAO.cpp  VBO.cpp
src/RiseEngineCore/: Application.cpp  Application.h  Application.hpp  Core.h  InputManager.cpp  InputManager.hpp  Main.cpp  RiseEngine.hpp  RiseEngineCore.vcxproj  RiseEngineCore.vcxproj.filters  Types.h  Window.cpp  Window.hpp
src/RiseEngineCore/Core/: Core.h  CoreCommon.h  CoreCommon.hpp  CoreTypes.h  CoreTypes.hpp  FileSystem.hpp
src/RiseEngineCore/DebugIncludes/: DebugIncludes.h
src/RiseEngineCore/ErrorHandling/: ErrorHandler.cpp  ErrorHandler.h
src/RiseEngineCore/Math/: RiseMath.cpp  RiseMath.h
src/RiseEngineCore/Math/Vector/: Vector.h  Vector.inl
src/Runtime/Input/: InputManager.cpp  InputManager.h
src/Runtime/MainFramework/Private/: Camera.cpp  Entity.cpp  EntityComponent.cpp  MeshComponent.cpp  PrimitiveComponent.cpp  SpaceComponent.cpp  StaticMeshComponent.cpp
src/Runtime/MainFramework/Public/: Camera.h  Entity.h  EntityComponent.h  MeshComponent.h  (+3 more)
(+2 files in other folders)
